차량예약 > 예약하기 > L.POINT    --  작업 중

--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -6,6 +6,9 @@
     display: flex;
     align-items: center;
 }
+.mt60{
+    margin-top: 60px;
+}
 
 .reservation {
     position: relative;
@@ -349,6 +352,8 @@
         &.lpoint {
             background-color: $blue-050;
             .logo-img {
+                width: 100px;
+                height: 18px;
                 background: url(#{$url-content}lpoint_logo_w.svg) no-repeat;
             }
         }
@@ -418,6 +423,42 @@
             }
         }
     }
+    .card-number{
+        label{
+            display: block;
+            color: $gray-000;
+            font-size: 14px;
+            font-weight: normal;
+            margin-bottom: 8px;
+        }
+        .card-input{
+            width: 100%;
+            height: 48px;
+            padding: 0 24px;
+            background-color: $gray-000;
+            border-radius: $border-radius;
+            overflow: hidden;
+            @include flex-center();
+            input{
+                font-size: 16px;
+                font-weight: 500;
+                padding-right: 0;
+                text-align: center;
+                &::placeholder{
+                    font-size: 16px;
+                }
+                &:focus{
+                    outline: none;
+                }
+            }
+            .dash{
+                color: $navy-020;
+                &.active{
+                    color: $navy-070;
+                }
+            }
+        }
+    }
     .btn-area{
         margin-bottom: 12px;
         text-align: right;
@@ -425,6 +466,10 @@
             color: $blue-050;
             font-size: 13px;
             text-decoration: underline;
+        }
+        &.both-sides{
+            display: flex;
+            justify-content: space-between;
         }
     }
 }
