--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -183,23 +183,47 @@
         padding: 26px 0 30px;
     }
     .section-title {
-        display: flex;
-        align-items: center;
         font-size: 12px;
-        font-weight: 700;
+        font-weight: bold;
         color: $navy-070;
-        margin-bottom: 16px;
+        margin-bottom: 14px;
+        @include flex-center();
+        h3 {
+            @include flex-center();
+        }
         .badge-num {
             color: $green-060;
             font-size: 16px;
             font-weight: 700;
             margin-left: 4px;
         }
+        .filter {
+            color: $navy-020;
+            font-size: 12px;
+            margin-left: auto;
+            @include flex-center();
+            .active {
+                color: $navy-050;
+                font-weight: bold;
+            }
+            .divider-v {
+                display: inline-block;
+                width: 1px;
+                height: 14px;
+                background-color: $navy-020;
+                margin: 0 6px;
+                border: 0;
+            }
+        }
     }
-    .section-body {
-        margin-top: 18px;
+    .section-cont {
         font-size: 16px;
         font-weight: 700;
+        .ip-group{
+            .btn{
+                width: 70px;
+            }
+        }
     }
 
     .coupon-list {
@@ -228,7 +252,7 @@
                 @include flex-center();
                 span {
                     &:nth-child(1) {
-                        color: $navy-030;
+                        color: $navy-070;
                         font-size: 18px;
                         font-weight: 700;
                     }
@@ -274,25 +298,25 @@
         }
     }
 }
-.btn-filter {
-    height: 34px;
-    padding: 0 12px;
-    background-color: #fff;
-    border: 1px solid $navy-020;
-    border-radius: 2rem;
-    position: fixed;
-    left: 50%;
-    bottom: 40px;
-    transform: translateX(-50%);
-    z-index: 100;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-    @include flex-center();
-    .text {
-        color: $navy-060;
-        font-size: 14px;
-        margin-left: 4px;
-    }
-}
+// .btn-filter {
+//     height: 34px;
+//     padding: 0 12px;
+//     background-color: #fff;
+//     border: 1px solid $navy-020;
+//     border-radius: 2rem;
+//     position: fixed;
+//     left: 50%;
+//     bottom: 40px;
+//     transform: translateX(-50%);
+//     z-index: 100;
+//     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+//     @include flex-center();
+//     .text {
+//         color: $navy-060;
+//         font-size: 14px;
+//         margin-left: 4px;
+//     }
+// }
 
 //멤버십
 .membership {
