--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -119,6 +119,7 @@
             font-weight: bold;
             margin-bottom: 20px;
             + p {
+                color: $navy-070;
                 font-size: 16px;
                 font-weight: 500;
             }
