공통 및 차량예약

--- a/src/components/button.html
+++ b/src/components/button.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+<title>button</title>
 @@include('@@webRoot/include/head.html')
 <style>
 .contents {
@@ -80,6 +81,7 @@ h2 {
 						<button type="button" class="btn line check active">Check</button>
 						<button type="button" class="btn line check" disabled>Check</button>
 						<button type="button" class="btn line plus">Button</button>
+						<button class="btn-link" type="button">Link Button<i class="ico arrow-right-nav050 xs"></i></button>
 					</div>
 
 				</div>
@@ -87,7 +89,7 @@ h2 {
 				<!-- row -->
 				<div class="btn-wrap">
 					<div class="btn-group">
-						<button type="button" class="btn cancle sm">test</button>
+						<button type="button" class="btn cancel sm">test</button>
 						<button type="button" class="btn sm">test</button>
 					</div>
 				</div>
