--- a/src/components/etc.html
+++ b/src/components/etc.html
@@ -183,21 +183,23 @@
 	<div class="layer-popup-wrap type-full" id="tmpLayer04">
 		<div class="layer-container">
 			<!-- layer contents in -->
-			<div class="layer-header">
-				@@include('@@webRoot/include/header.html', {
-					type: "sub_pop",
-					title: "full layer demo"
-				})
+			<div class="layer-wrap">
+				<div class="layer-header">
+					@@include('@@webRoot/include/header.html', {
+						type: "sub_pop",
+						title: "full layer demo"
+					})
+				</div>
+				<div class="layer-body">
+					프리존 반납 안내<br>
+					프리존 반납 안내<br>
+					프리존 반납 안내<br>
+					프리존 반납 안내<br>
+					프리존 반납 안내<br>
+					프리존 반납 안내
+				</div>
+				<!-- //layer contents in -->
 			</div>
-			<div class="layer-body">
-				프리존 반납 안내<br>
-				프리존 반납 안내<br>
-				프리존 반납 안내<br>
-				프리존 반납 안내<br>
-				프리존 반납 안내<br>
-				프리존 반납 안내
-			</div>
-			<!-- //layer contents in -->
 		</div>
 	</div>
 	<!-- //full layer demo -->
