--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -32,6 +32,8 @@ $icon-size: (
         "back": "back.svg",
         "next-sm": "next_sm.svg",
         "arrow-right": "arrow-right.svg",
+        "ico-check": "ico_check_off.svg",
+        "arrow-right-nav050": "ico_arrow_right_navy050.svg",
         "arrow-left": "arrow-left.svg",
         "arrow-bot": "arrow-bot.svg",
         "star": "star.svg",
