--- a/src/components/form.html
+++ b/src/components/form.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-@@include('@@webRoot/include/head.html')
+	<title>form</title>
+	@@include('@@webRoot/include/head.html')
 <style>
 .contents{padding:20px 40px 20px !important}
 .contents .tmp-guide-box{margin-left:0;margin-right:0}
