--- a/src/components/input.html
+++ b/src/components/input.html
@@ -1,174 +1,175 @@
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
-        @@include('@@webRoot/include/head.html')
-        <style>
-            .contents {
-				padding: 20px 40px 20px !important;
-            }
-			.module{
-				display:flex;
-				flex-wrap: wrap;
-			}
-            .contents .tmp-guide-box {
-                margin-left: 0;
-                margin-right: 0;
-            }
-            h2 {
-                margin-bottom: 20px;
-                font-size: 30px;
-            }
+<head>
+<title>input</title>
+	@@include('@@webRoot/include/head.html')
+	<style>
+		.contents {
+			padding: 20px 40px 20px !important;
+		}
+		.module{
+			display:flex;
+			flex-wrap: wrap;
+		}
+		.contents .tmp-guide-box {
+			margin-left: 0;
+			margin-right: 0;
+		}
+		h2 {
+			margin-bottom: 20px;
+			font-size: 30px;
+		}
 
-			.tmp-guide-box{
-				flex:1;
-				width:360px;
-				flex-basis: 360px;
-				max-width: 360px;
-				margin-right:40px !important;
-				box-sizing: border-box;
-			}
-        </style>
-    </head>
-    <body>
-        <div id="wrap">
-            <!-- container -->
-            <section id="container">
-                <div class="contents">
+		.tmp-guide-box{
+			flex:1;
+			width:360px;
+			flex-basis: 360px;
+			max-width: 360px;
+			margin-right:40px !important;
+			box-sizing: border-box;
+		}
+	</style>
+</head>
+<body>
+	<div id="wrap">
+		<!-- container -->
+		<section id="container">
+			<div class="contents">
 
 
-                    <h2>INPUT BOX</h2><br>
+				<h2>INPUT BOX</h2><br>
 
-					<div class="module">
+				<div class="module">
 
-						<!-- Password -->
-						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Input Line</h2>
+					<!-- Password -->
+					<div class="tmp-guide-box">
+						<h2 class="guide-box-tit">Input Line</h2>
 
-							<div class="ip-wrap">
-								<div class="ip-group">
-									<div class="row">
-										<label for="ip01" class="ip-label">추천인 아이디</label>
-										<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
-										<button type="button" class="icon-group btn-del">
-											<i class="ico delete md"></i>
-										</button>
-										<div class="line"></div>
-									</div>
-									<p class="error-txt">비밀번호가 일치하지 않습니다</p>
-								</div>
-
-								<div class="ip-group">
-									<div class="row error">
-										<label for="fakePassword" class="ip-label">비밀번호</label>
-										<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
-										<div class="line"></div>
-										<span class="icon-group">
-											<button type="button" class="ip-icon">
-												<i class="ico delete md"></i>
-											</button>
-											<button id="toggler" type="button" class="ip-icon">
-												<i class="ico eye-on md"></i>
-											</button>
-										</span>
-									</div>
-									<p class="error-txt">비밀번호가 일치하지 않습니다</p>
-								</div>
-							</div>
-
-							<br>
-
+						<div class="ip-wrap">
 							<div class="ip-group">
 								<div class="row">
-									<input type="text" class="ip-txt" placeholder="이름">
-									<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
-									<div class="line"></div>
-								</div>
-							</div>
-	
-							<br />
-							
-							<div class="ip-group">
-								<div class="row error">
-									<input type="text" class="ip-txt" required placeholder="이름">
+									<label for="ip01" class="ip-label">추천인 아이디</label>
+									<input id="ip01" type="text" class="ip-txt" placeholder="추천인 아이디 입력">
+									<button type="button" class="icon-group btn-del">
+										<i class="ico delete md"></i>
+									</button>
 									<div class="line"></div>
 								</div>
 								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
 							</div>
 
-						</div>
-	
-						<!-- Password -->
-
-						<!-- Input -->
-						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Input Box</h2>
-	
-							<div class="ip-wrap">
-								<div class="ip-group box">
-									<div class="row">
-										<input type="text" class="ip-txt" placeholder="이름">
-										<div class="line"></div>
-									</div>
+							<div class="ip-group">
+								<div class="row error">
+									<label for="fakePassword" class="ip-label">비밀번호</label>
+									<input type="password" id="fakePassword" class="ip-txt" placeholder="비밀번호 확인">
+									<div class="line"></div>
+									<span class="icon-group">
+										<button type="button" class="ip-icon">
+											<i class="ico delete md"></i>
+										</button>
+										<button id="toggler" type="button" class="ip-icon">
+											<i class="ico eye-on md"></i>
+										</button>
+									</span>
 								</div>
-		
-								<div class="ip-group box">
-									<div class="row error">
-										<input type="text" class="ip-txt" placeholder="이름">
-										<div class="line"></div>
-									</div>
-									<p class="error-txt">이름이 일치하지 않습니다</p>
+								<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+							</div>
+						</div>
+
+						<br>
+
+						<div class="ip-group">
+							<div class="row">
+								<input type="text" class="ip-txt" placeholder="이름">
+								<!-- <input required type="password" class="ip-txt" name="password" placeholder="비밀번호" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"> -->
+								<div class="line"></div>
+							</div>
+						</div>
+
+						<br />
+						
+						<div class="ip-group">
+							<div class="row error">
+								<input type="text" class="ip-txt" required placeholder="이름">
+								<div class="line"></div>
+							</div>
+							<p class="error-txt">비밀번호가 일치하지 않습니다</p>
+						</div>
+
+					</div>
+
+					<!-- Password -->
+
+					<!-- Input -->
+					<div class="tmp-guide-box">
+						<h2 class="guide-box-tit">Input Box</h2>
+
+						<div class="ip-wrap">
+							<div class="ip-group box">
+								<div class="row">
+									<input type="text" class="ip-txt" placeholder="이름">
+									<div class="line"></div>
 								</div>
 							</div>
 	
-							<br>
-							
-							<input type="text" value="disabled" disabled />
+							<div class="ip-group box">
+								<div class="row error">
+									<input type="text" class="ip-txt" placeholder="이름">
+									<div class="line"></div>
+								</div>
+								<p class="error-txt">이름이 일치하지 않습니다</p>
+							</div>
 						</div>
-						<!-- //Input -->
-	
-						<!-- Select -->
-						<div class="tmp-guide-box">
-							<h2 class="guide-box-tit">Select</h2>
-							<select name="" id="">
-								<option value="옵션1">옵션1</option>
-								<option value="옵션2">옵션2</option>
-								<option value="옵션3">옵션3</option>
-							</select>
-						</div>
-						<!-- Select -->
-	
-						<!-- input file -->
-						<div class="tmp-guide-box">
-							<!-- 
-								이미지 다중 선택 : multiple
-								aos : accept 갤러리 바로 접근
-							-->
-							<input type="file" multiple accept=image/*>
-						</div>
-	
+
+						<br>
+						
+						<input type="text" value="disabled" disabled />
 					</div>
-				</section>
-			</div>
+					<!-- //Input -->
+
+					<!-- Select -->
+					<div class="tmp-guide-box">
+						<h2 class="guide-box-tit">Select</h2>
+						<select name="" id="">
+							<option value="옵션1">옵션1</option>
+							<option value="옵션2">옵션2</option>
+							<option value="옵션3">옵션3</option>
+						</select>
+					</div>
+					<!-- Select -->
+
+					<!-- input file -->
+					<div class="tmp-guide-box">
+						<!-- 
+							이미지 다중 선택 : multiple
+							aos : accept 갤러리 바로 접근
+						-->
+						<input type="file" multiple accept=image/*>
+					</div>
+
+				</div>
+			</section>
 		</div>
+	</div>
 
 
-        <script type="text/javascript">
-			// 비밀번호 입력필드
-            var password = document.getElementById("fakePassword");
-            var toggler = document.getElementById("toggler");
+	<script type="text/javascript">
+		// 비밀번호 입력필드
+		var password = document.getElementById("fakePassword");
+		var toggler = document.getElementById("toggler");
 
-            showHidePassword = () => {
-                if (password.type == "password") {
-                    password.setAttribute("type", "text");
-                    toggler.classList.add("eye-off");
-                } else {
-                    toggler.classList.remove("eye-off");
-                    password.setAttribute("type", "password");
-                }
-            };
+		showHidePassword = () => {
+			if (password.type == "password") {
+				password.setAttribute("type", "text");
+				toggler.classList.add("eye-off");
+			} else {
+				toggler.classList.remove("eye-off");
+				password.setAttribute("type", "password");
+			}
+		};
 
-            toggler.addEventListener("click", showHidePassword);
-			// 비밀번호 입력필드 end
-        </script>
-    </body>
+		toggler.addEventListener("click", showHidePassword);
+		// 비밀번호 입력필드 end
+	</script>
+</body>
 </html>
