--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -54,7 +54,7 @@ caption {
 }
 
 /* Remove the border on images inside links in IE 10. */
-img{border-style: none;}
+img{max-width:100%;border-style: none;}
 
 /* Show the overflow in Edge. */
 button, input{overflow: visible;}
