--- a/src/scss/_text.scss
+++ b/src/scss/_text.scss
@@ -35,9 +35,57 @@
 	}
 }
 
+.deco-througt{
+	text-decoration:line-through;
+}
+
+.tag{
+	@include vDom();
+
+	height:24px;
+	margin-left:3px;
+	padding:0 7px;
+	font-size:$font-sm;
+	color:#6E7375;
+	line-height:17px;
+	border-radius: 4px;
+	vertical-align:middle;
+	background-color:#F3F4F5;
+
+	&:first-child{
+		margin-left:0;
+	}
+
+	&.sale{
+		color:#4285F4;
+		background-color:#E4F2FF;
+	}
+}
+
 .txt-list{
-
 	&.dot{
-
+		li,p{
+			position:relative;
+			padding-left:15px;
+			font-size:$font-md;
+			line-height:23px;
+			color:$navy-040;
+	
+			&:not(:first-child){
+				margin-top:10px;
+			}
+	
+			&:before {
+				display: inline-block;
+				position: absolute;
+				top: 10px;
+				left: 0;
+				width: 4px;
+				height: 4px;
+				content: " ";
+				border-radius: 2rem;
+				background-color: #8c989e;
+			}
+		}
 	}
 }
