바텀 버튼 영역 disabled 추가

--- a/src/components/button.html
+++ b/src/components/button.html
@@ -69,6 +69,7 @@ h2 {
 						<button type="button" class="btn green md">Button md</button>
 						<button type="button" class="btn green lg">Button lg</button>
 						<button type="button" class="btn xl">Button xl</button>
+						<button type="button" class="btn link lg">Button lg</button>
 						<br><br>
 						<button type="button" class="btn full" disabled>disabled Button</button>
 						<button type="button" class="btn full">Full Button</button>
