--- a/src/components/layout01.html
+++ b/src/components/layout01.html
@@ -36,7 +36,7 @@
 				</style>
 
 
-				@@include('@@webRoot/include/bot_fix.html', {type: "type01"})
+				@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"false", disabled:"false"})
 			</div>
 		</section>
 		<!-- //container -->
