--- a/src/components/swiper.html
+++ b/src/components/swiper.html
@@ -69,7 +69,6 @@
 	width:5px;
 	height:5px;
 	border-radius:50%;
-	background-color: ;
 }
 
 </style>
@@ -107,7 +106,7 @@
 				</script>
 
 			</div>
-			@@include('@@webRoot/include/bot_fix.html', {type: "type01"})
+			@@include('@@webRoot/include/bot_fix.html', {type: "type01", title:"false", disabled:"false"})
 		</section>
 		<!-- //container -->
 
