이미지 네이밍 규칙 수정

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -92,7 +92,7 @@ $btn-size: (
 			height:13px;
 			margin-right:7px;
 			content:"";
-			background:url(#{$url-common}ico-btn-check.svg) no-repeat;
+			background:url(#{$url-common}ico_btn_check.svg) no-repeat;
 			background-size:100% 100%;
 		}
 		&.active{
