--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -395,7 +395,7 @@ textarea {
 		width:96px;
 		height:96px;
 		content:"";
-		background: url(#{$url-common}no-data.svg) no-repeat;
+		background: url(#{$url-common}bg_nodata.svg) no-repeat;
 	}
 }
 
