--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -26,25 +26,25 @@ $icon-size: (
         "height": 32px
     ),
     "file": (
-        "delete": "delete.svg",
-        "close": "close.svg", 
-        "home": "home.svg",
-        "back": "back.svg",
-        "next-sm": "next_sm.svg",
+		"search": "search.svg",
+        "sort": "sort.svg",
+		"star": "star.svg",
+        "delete": "ico_delete.svg",
+        "close": "ico_close.svg", 
+        "home": "ico_home.svg",
+        "back": "ico_back.svg",
+        "next-sm": "ico_next_sm.svg",
         "arrow-right": "arrow-right.svg",
         "ico-check": "ico_check_off.svg",
         "arrow-right-nav050": "ico_arrow_right_navy050.svg",
         "arrow-left": "arrow-left.svg",
-        "arrow-bot": "arrow-bot.svg",
-        "star": "star.svg",
-        "eye-on": "eye_on.svg",
-        "eye-off": "eye_off.svg",
-        "bookmark": "bookmark.svg",
+        "arrow-bot": "ico_arrow_bot.svg",
+        "eye-on": "ico_eye_on.svg",
+        "eye-off": "ico_eye_off.svg",
+        "bookmark": "ico_bookmark.svg",
         "bookmark-active": "bookmark_active.svg",
-        "search": "search.svg",
-        "sort": "sort.svg",
-        "badge-g": "badge-g.svg",
-        "plus": "plus.svg",
+        "badge-g": "ico_badge_g.svg",
+        "plus": "ico_plus.svg",
     )
     
 ) !default;
