--- a/src/components/tab.html
+++ b/src/components/tab.html
@@ -44,18 +44,29 @@
 						<div class="tmp-guide-box">
 							<h2 class="guide-box-tit">Button Tab</h2>
 
+							<div class="gc-tab">
+								<ul>
+									<li><a href="#" class="active">01.TEXT</a></li>
+									<li><a href="#">02.TEXT</a></li>
+									<li><a href="#">03.TEXT</a></li>
+								</ul>
+								<span class="tab-indicator"></span>
+							</div>
+
+							<br><br>
+
+							<div class="gc-tab-type02">
+								<ul>
+									<li><a href="#" class="active">01.TEXT</a></li>
+									<li><a href="#">02.TEXT</a></li>
+									<li><a href="#">03.TEXT</a></li>
+								</ul>
+								<span class="tab-indicator"></span>
+							</div>
+
+							<br><br>
+							
 							<div class="btn-tab">
-								<div class="gc-tab">
-									<ul>
-										<li><a href="#" class="active">쿠폰</a></li>
-										<li><a href="#">KT멤버십</a></li>
-										<li><a href="#">T멤버십</a></li>
-									</ul>
-									<span class="tab-indicator"></span>
-								</div>
-
-								<br><br>
-
 								<div class="scroll-area">
 									<button type="button" class="btn line xs active">그린존 전체</button>
 									<button type="button" class="btn line xs">공항</button>
