--- a/src/scss/_tab.scss
+++ b/src/scss/_tab.scss
@@ -1,39 +1,118 @@
 @charset "UTF-8";
 
 /* tab */
-.gc-tab {
-	position:relative;
-	overflow-x:auto;
-	border-bottom:1px solid #000;
-	&::-webkit-scrollbar {
-		display: none;
-	}
-	&.page{
-		ul{
+// .gc-tab {
+// 	position:relative;
+// 	overflow-x:auto;
+// 	border-bottom:1px solid #000;
+// 	&::-webkit-scrollbar {
+// 		display: none;
+// 	}
+// 	&.page{
+// 		ul{
+// 			flex-wrap:wrap;
+// 		}
+// 	}
+// 	ul {
+// 		position:relative;
+// 		display:flex;
+// 		z-index:1;
+// 		li {
+// 			flex:1;
+// 			a {
+// 				position:relative;
+// 				display:block;
+// 				padding:10px 20px;
+// 				color:#000;
+// 				text-align:center;
+// 				&.active {
+// 					&:before {
+// 						content:'';
+// 						position:absolute;
+// 						left:0;
+// 						bottom:0;
+// 						width:100%;
+// 						height:2px;
+// 						background-color:#0d6efd;
+// 					}
+// 				}
+// 			}
+// 		}
+// 	}
+// }
+
+.gc {
+	&-tab{
+		margin: 0 -20px;
+		border-bottom: none;
+
+		&:after {
+			content: " ";
+			display: block;
+			height: 1px;
+			background-color: #d9dddf;
+			position: relative;
+			bottom: 2px;
+		}
+		ul {
+			display:flex;
 			flex-wrap:wrap;
+			z-index:1;
+			
+			li {
+				flex:1;
+				
+				a {
+					display: flex;
+					position:relative;
+					justify-content: center;
+					align-items: center;
+					height: 56px;
+					vertical-align: middle;
+					color: #8c989e;
+					font-size: 18px;
+					font-weight: 500;
+					text-align:center;
+	
+					&.active {
+						color: $navy-070;
+						font-weight: 700;
+						&:before {
+							content:'';
+							position:absolute;
+							left:0;
+							bottom:1px;
+							width:100%;
+							height:4px;
+							background-color: #333;
+						}
+					}
+				}
+			}
 		}
 	}
-	ul {
-		position:relative;
-		display:flex;
-		z-index:1;
-		li {
-			flex:1;
-			a {
-				position:relative;
-				display:block;
-				padding:10px 20px;
-				color:#000;
-				text-align:center;
-				&.active {
-					&:before {
-						content:'';
-						position:absolute;
-						left:0;
-						bottom:0;
-						width:100%;
-						height:2px;
-						background-color:#0d6efd;
+
+	&-tab-type02{
+		ul{
+			display:flex;
+			
+			li{
+				flex:1;
+
+				a{
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					height:44px;
+					font-size:$font-sm2;
+					color:$navy-040;
+					font-weight:500;
+					vertical-align: middle;
+					background-color:$navy-020;
+
+					&.active{
+						color:$gray-000;
+						background-color:$navy-060;
 					}
 				}
 			}
