--- a/src/scss/_reservation.scss
+++ b/src/scss/_reservation.scss
@@ -65,7 +65,8 @@
         .row {
             display: flex;
             align-items: center;
-            input[type="text"], input[type="password"] {
+            input[type="text"], 
+            input[type="password"] {
                 flex: 1;
                 height: 48px;
                 padding: 0 20px;
